# polkadot-runtime-templates

./: .gitignore  .typos.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package-lock.json  para-4285-genesis-state  para-4285-wasm  plain-parachain-chainspec.json  raw-parachain-chainspec.json  rust-toolchain.toml  rustfmt.toml  zombienet.sh
common/: Cargo.toml
common/src/: lib.rs
confidential-assets/benches/: Cargo.toml  README.md
confidential-assets/benches/benches/: fhe_vs_u128.rs  mw_vs_u128.rs
confidential-assets/oz-fhe-primitives/: Cargo.toml
confidential-assets/oz-fhe-primitives/src/: fhe.rs  lib.rs  oracle.rs
confidential-assets/pallet-fhe-oracle/: Cargo.toml
confidential-assets/pallet-fhe-oracle/src/: lib.rs
confidential-assets/pallet-zether/: Cargo.toml
confidential-assets/pallet-zether/src/: lib.rs
confidential-assets/pallet-zk-elgamal-verifier/: Cargo.toml
confidential-assets/pallet-zk-elgamal-verifier/src/: lib.rs  range_verifier.rs  tests.rs
confidential-assets/pallets/confidential-assets/: Cargo.toml
confidential-assets/pallets/confidential-assets/src/: lib.rs
confidential-assets/pallets/pallet-mimblewimble/: Cargo.toml
confidential-assets/pallets/pallet-mimblewimble/src/: lib.rs
confidential-assets/pallets/pallet-multi-utxo/: Cargo.toml
confidential-assets/pallets/pallet-multi-utxo/src/: lib.rs
confidential-assets/pallets/pallet-multi-utxo/v2/: README.md  child_tries.rs
confidential-assets/pallets/zkhe/: Cargo.toml
confidential-assets/pallets/zkhe/src/: lib.rs
confidential-assets/precompiles/pvm-precompile-confidential-assets/: Cargo.toml
confidential-assets/precompiles/pvm-precompile-confidential-assets/src/: lib.rs
confidential-assets/primitives-zk-elgamal/: Cargo.toml
confidential-assets/primitives-zk-elgamal/src/: lib.rs
confidential-assets/zk-elgamal-prover/: Cargo.toml
confidential-assets/zk-elgamal-prover/src/: lib.rs
confidential-assets/zkhe-verifier/: Cargo.toml
confidential-assets/zkhe-verifier/src/: lib.rs  range.rs  tests.rs
evm-template/: CHANGELOG.md  Cargo.toml  rust-toolchain.toml  rustc-ice-2024-05-26T06_23_59-2106.txt
evm-template/contracts/: EntryPoint.json  contracts.json
evm-template/fhe/pallet/: Cargo.toml  IConfidentialAssets.sol
evm-template/fhe/pallet/src/: lib.rs  ops.rs
evm-template/fhe/precompile/: Cargo.toml
evm-template/fhe/primitives/: Cargo.toml
evm-template/fhe/primitives/src/: fhe.rs  lib.rs
evm-template/node/: Cargo.toml
evm-template/node/src/: chain_spec.rs  cli.rs  command.rs  eth.rs  fhe.rs  fhe_init.rs  main.rs  rpc.rs  service.rs
evm-template/node/src/contracts/: abi.rs  defaults.rs  forge.rs  hardhat.rs  mod.rs
evm-template/node/src/fhe/: mod.rs  testing.rs
evm-template/node/src/rpc/: eth.rs  mod.rs
evm-template/node/src/tanssi_rpc/: eth.rs  mod.rs
evm-template/node/tests/: fhe_smoke.rs
evm-template/pallets/multi-assets/: Cargo.toml
evm-template/pallets/multi-assets/src/: lib.rs
evm-template/pallets/multicurrency/: Cargo.toml
evm-template/pallets/multicurrency/src/: lib.rs
evm-template/polkadot-launch/: config.json
evm-template/precompiles-fhe/: Cargo.toml
evm-template/precompiles-fhe/src/: lib.rs
evm-template/rpc-testing/: EVM Testing.postman_collection.json  README.md  TestContract.sol
evm-template/runtime/: Cargo.toml  build.rs  rustc-ice-2024-05-26T06_23_44-2088.txt  rustc-ice-2024-05-29T14_00_29-34092.txt
evm-template/runtime/src/: apis.rs  benchmark.rs  constants.rs  defi.rs  genesis_config_presets.rs  lib.rs  precompiles.rs  types.rs  xcm_config.rs
evm-template/runtime/src/configs/: asset_config.rs  assets_config.rs  confidential_assets_config.rs  fhe_config.rs  mod.rs  weight.rs  xcm_config.rs
evm-template/runtime/src/governance/: mod.rs
evm-template/runtime/src/weights/: cumulus_pallet_parachain_system.rs  cumulus_pallet_xcmp_queue.rs  mod.rs  pallet_asset_manager.rs  pallet_assets.rs  pallet_balances.rs  pallet_collator_selection.rs  pallet_conviction_voting.rs  pallet_evm.rs  pallet_message_queue.rs  pallet_multisig.rs  pallet_preimage.rs  pallet_proxy.rs  pallet_referenda.rs  pallet_scheduler.rs  (+10 more)
evm-template/runtime/tests/: constants_test.rs  genesis_aura_test.rs  multiplier.rs  storage.rs  xcm_test.rs  xcm_tests.rs
evm-template/scripts/: zombienet.sh
evm-template/scripts/assets/: pallets.txt
evm-template/template-fuzzer/: Cargo.toml
evm-template/template-fuzzer/src/: assets.rs  main.rs  random.rs
evm-template/zombienet-config/: devnet.toml
generic-template/: Cargo.toml  rust-toolchain.toml
generic-template/node/: Cargo.toml
generic-template/node/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
generic-template/oz-wrappers/: Cargo.toml  README.md
generic-template/oz-wrappers/src/: constants.rs  lib.rs  system.rs  types.rs
generic-template/primitives/: Cargo.toml
generic-template/primitives/src/: generic.rs  lib.rs
generic-template/runtime/: Cargo.toml  build.rs  rustc-ice-2024-08-19T17_27_18-96365.txt  rustc-ice-2024-10-22T14_21_24-31535.txt  rustc-ice-2024-10-27T01_16_36-90798.txt
generic-template/runtime/src/: apis.rs  benchmark.rs  constants.rs  genesis_config_presets.rs  lib.rs  types.rs  xcm_config.rs
generic-template/runtime/tests/: constants_test.rs  genesis_aura_test.rs  multiplier.rs  storage.rs  xcm_tests.rs
generic-template/scripts/: generate-benchmarks.sh  zombienet.sh
generic-template/scripts/assets/: pallets.txt
generic-template/template-fuzzer/: Cargo.toml  README.md
generic-template/template-fuzzer/src/: main.rs
generic-template/zombienet/: README.md
generic-template/zombienet-config/: README.md  devnet.toml
generic-template/zombienet/configuration/: README.md  devnet.toml
generic-template/zombienet/tests/: Cargo.toml
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
pallets/template/: Cargo.toml
pallets/template/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
template-fuzzer/: Cargo.toml  Dockerfile  run-fuzzer.sh
template-fuzzer/src/: main.rs
(+255 files in other folders)
