[workspace]
members = [ "node", "pallets/template", "runtime" ]
resolver = "2"
[workspace.package]
edition = "2021"
repository = "https://github.com/paritytech/polkadot-sdk"


[workspace.lints.clippy]
large_enum_variant = "allow"
too_many_arguments = "allow"
type_complexity = "allow"

[profile.release]
panic = "unwind"
