[package]
name = "common"
version = "0.1.0"
authors = ["Anonymous"]
edition.workspace = true
description = "Logic which is common to all runtimes"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.3.0", default-features = false }